fix spacing

--- a/src/components/Toggle/toggle.css
+++ b/src/components/Toggle/toggle.css
@@ -4,7 +4,7 @@
 .toggle-container {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap
 }
 
